# ai-speed-camera

./: .gitignore  .pre-commit-config.yaml  README.md  annotations_processor.py  init.py  parse.py  pyproject.toml  video.py
.github/workflows/: tests.yml
ai_speed_camera/: __main__.py  annotations_processor.py  parse.py  video.py
sample_data/: output.json
tests/: test_ai_speed_camera.py
