[tool.poetry]
name = "ai-speed-camera"
version = "0.1.0"
description = "Add annotations with speeds to videos of vehicles"
authors = ["James Thomas <james@jamesthom.as>"]

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
