[tool.poetry]
name = "ai-speed-camera"
version = "0.1.0"
description = "Add annotations with speeds to videos of vehicles"
authors = ["James Thomas <james@jamesthom.as>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
